--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,3 @@
-/**
- * Copyright 2015 Google Inc. All Rights Reserved.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 html, body {
   font-family: 'Roboto', 'Helvetica', sans-serif;
   font-size: 14px;
@@ -269,10 +253,6 @@ _:-ms-input-placeholder, :root .demo-graph {
   box-shadow: none !important;  
   background: rgba(0,0,0,0) !important;
 }
-body {
-  background: url('images/Desktop.png') !important;
-  background-size: cover !important;
-}
 .demo-filters {
   padding: 0 40px;
   display: none;
@@ -310,17 +290,37 @@ select {
 }
 
 .mdl-card--expand {
-  flex-grow: 0;
-  min-height: 272px;
+  flex-grow: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1; 
 }
 .demo-card__title {
   padding: 16px;
-  min-height: auto;
+  min-height: 80px;
+  height: auto;
+  overflow: scroll;
   color: #fff;
+}
+.demo-card__title h1 {
+  font-size: 18px;
+  margin: 1em 0 0;
+}
+.demo-card__title h2 {
+  font-size: 14px;
+  margin: .5em 0 0;
+  line-height: 20px;
 }
 .mdl-card__supporting-text {
   flex-grow: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
   overflow: scroll;
+  font-size: 14px;
+}
+.mdl-card__supporting-text h5 {
+  font-size: 14px;
+  line-height: 20px;
+  margin-top: 6px;
 }
 .mdl-card__actions .mdl-button {
   display: block;
@@ -333,6 +333,14 @@ select {
   font-size: 14px;
 }
 
+.fromto-filters .fromto-item {
+  display: inline-block;
+  width: 45%;
+  margin-top: -0.8em;
+}
+.fromto-filters .fromto-item:last-child {
+  float: right;
+}
 
 /* ==========  Select Field Variables ========== */
 /* ==========  Select Field ========== */
@@ -368,6 +376,7 @@ select:focus {
 .mdl-selectfield {
   font-family: 'Roboto','Helvetica','Arial',sans-serif;
   position: relative;
+  padding-bottom: 20px;
 }
 .mdl-selectfield:after {
   position: absolute;
